--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@
 main: 
     
   - title: "CV"
-    url: /files/Anderson_CV.pdf
+    url: /files/Anderson_CV(July2025).pdf
   - title: "Research"
     url: /research/
   - title: "Teaching"
