--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "Anderson_Peter_858_1440.jpg"
   name             : "Peter Anderson"
   pronouns         : # example: "she/her"  
-  bio              : "Peter Anderson is a PhD Candidate in Economics at the University of Virginia. His research focuses on public and health economics, with an emphasis on the design and impact of U.S. nutrition assistance programs. His dissertation examines how the WIC program’s infant formula subsidies influence infant feeding choices, childhood obesity, and overall welfare."
+  bio              : #"Peter Anderson is a PhD Candidate in Economics at the University of Virginia. His research focuses on public and health economics, with an emphasis on the design and impact of U.S. nutrition assistance programs. His dissertation examines how the WIC program’s infant formula subsidies influence infant feeding choices, childhood obesity, and overall welfare."
   location         : "Durham, NC"
   employer         : "University of Virginia"
   uri              : # URL
