--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "PeterMichaelAnderson/PeterMichaelAnderson.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "Anderson_Peter_858_1440.jpg"
+  avatar           : "Anderson.Peter-DSC_1162.jpg"
   name             : "Peter Anderson"
   pronouns         : # example: "she/her"  
   bio              : #"Peter Anderson is a PhD Candidate in Economics at the University of Virginia. His research focuses on public and health economics, with an emphasis on the design and impact of U.S. nutrition assistance programs. His dissertation examines how the WIC program’s infant formula subsidies influence infant feeding choices, childhood obesity, and overall welfare."
